--- a/src/main/resources/templates/handleBars.html
+++ b/src/main/resources/templates/handleBars.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>HandleBars Demo</title>
-    <script src="./js/scripts/handlebars-v4.0.10.js"></script>
-    <script src="./js/scripts/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="./js/dataHelpers.js" type="text/javascript"></script>
+    <script src="../static/js/scripts/handlebars-v4.0.10.js"></script>
+    <script src="../static/js/scripts/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="../static/js/dataHelpers.js" type="text/javascript"></script>
 </head>
 
 <body>
