--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <title>First Design</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge"/>-->
+    <!--<meta charset="UTF-8">-->
 </head>
 <body>
 <div class="first-page">
@@ -12,6 +16,7 @@
             <div class="sign-link">
                 <span class="agents">Agents</span>
                 <span class="login">Login</span>
+
             </div>
             <div class="sign-btn">
                 <button>Sign up</button>
@@ -19,7 +24,6 @@
         </div>
         <div class="home-describe">
             <h1>Relax, Finding An Agent Just Got Easier</h1>
-
             <h3>Receive proposals from best agents for free</h3>
         </div>
         <div class="home-search">
@@ -163,7 +167,8 @@
             <button class="tabs-right">Recent Feedbacks</button>
         </div>
         <div class="footer-describe">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
-            quisquam</div>
+            quisquam
+        </div>
         <div class="footer-name">John Mayer</div>
         <div class="footer-position">Halcyon,CEO</div>
         <div class="footer-portrait">
@@ -199,7 +204,7 @@
 </div>
 <script src="js/scripts/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/home_page.js" type="text/javascript"></script>
-<link href="css/style.css" type="text/css" rel="stylesheet">
+<link th:href="@{../../resources/static/css/home.css}" type="text/css" rel="stylesheet">
 <script src="https://use.fontawesome.com/6b2fbe46f2.js"></script>
 </body>
 </html>
