--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -5,42 +5,34 @@ body {
 }
 
 ::-webkit-input-placeholder {
-    color: white;
-    opacity: 1;
+    color: rgb(255, 255, 255);
 }
 
 :focus::-webkit-input-placeholder {
-    opacity: 0;
     transition: opacity 0.35s ease-in-out;
 }
 
 ::-moz-placeholder { /* Firefox 19+ */
-    color: #ccc;
-    opacity: 1;
+    color: rgb(255, 255, 255);
 }
 
 :focus::-moz-placeholder {
-    opacity: 0;
     transition: opacity 0.35s ease-in-out;
 }
 
 :-moz-placeholder { /* Firefox 4 - 18 */
     color: #dbdce0;
-    opacity: 1;
 }
 
 :focus:-moz-placeholder {
-    opacity: 0;
     transition: opacity 0.35s ease-in-out;
 }
 
 :-ms-input-placeholder {
     color: #dbdce0;
-    opacity: 1;
 }
 
 :focus:-ms-input-placeholder {
-    opacity: 0;
     transition: opacity 0.35s ease-in-out;
 }
 
@@ -55,7 +47,7 @@ body {
     height: 890px;
     background-size: cover;
     color: white;
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 .header {
@@ -107,8 +99,8 @@ body {
 .home_search .search_input {
     width: 48%;
     opacity: 0.4;
-    background: rgba(255,255,255,0.4);
-    border:none;
+    background: rgba(255, 255, 255, 0.5);
+    border: none;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     margin-right: -5px;
