--- a/src/main/webapp/sass/demo.scss
+++ b/src/main/webapp/sass/demo.scss
@@ -67,6 +67,16 @@ body {
     border-radius: 50%;
     clip: rect(auto, 50px, auto, auto);
   }
+
+  .line::after{
+    content: '';
+    border: solid 1px red;
+  }
+
+  .line::before{
+    content: '';
+    border: solid 1px red;
+  }
 }
 
 
