--- a/src/main/webapp/sass/chat.scss
+++ b/src/main/webapp/sass/chat.scss
@@ -1,18 +1,240 @@
+$blue: #81a8ca;
+$gray: #cccccc;
+$black: #4d4d68;
+
 body {
-  font-size: 79%;
-  .chat-header {
-    display: inline;
-    .header-left {
-      display: inline-block;
+  font-size: 30px;
+  font-family: sans-serif;
+
+  .header {
+    background-color: white;
+    padding: 20px;
+    border-bottom: solid 1px $gray;
+
+    .header_message {
+      list-style: none;
+      display: inline;
+      font-size: 50%;
+
+      li {
+        display: inline-block;
+        border: solid 1px $gray;
+        border-radius: 50%;
+        margin-left: 10px;
+        padding: 10px;
+      }
+
+      li:first-child {
+        background-color: $blue;
+        color: white;
+      }
     }
 
-    .header-middle {
+    .header_link {
       display: inline-block;
+      font-size: 100%;
+      margin-left: 36%;
+
+      .fa-twitter {
+        color: $blue;
+      }
     }
 
-    .header-right {
+    .header_search {
       display: inline-block;
+      float: right;
+      font-size: 50%;
+
+      .search_input {
+        display: inline-block;
+        border: solid 1px $gray;
+        padding: 8px;
+        border-radius: 50px;
+
+        input {
+          border: none;
+        }
+      }
     }
+  }
+
+  .content {
+    background-color: #f2eee8;
+    display: inline-flex;
+
+    .content-leftSide {
+      background-color: $blue;
+      width: 290px;
+      height: 873px;
+      color: white;
+
+      .leftSide-description {
+        text-align: center;
+
+        .description-basic {
+          font-size: 12px;
+          margin: 0 20px 10px 20px;
+
+          .basic_name {
+            font-size: 16px;
+            font-weight: bold;
+          }
+
+          .basic_btn {
+            color: white;
+            padding: 15px;
+            background-color: #6d94b5;
+            width: 160px;
+            margin-top: 30px;
+            border: none;
+            border-radius: 50px;
+          }
+
+          .portrait-big {
+            margin-top: 60px;
+          }
+
+          p {
+            font-size: 12px;
+            line-height: 1.5;
+          }
+
+        }
+      }
+
+      .description-activites {
+        margin: 0 10px 0 20px;
+
+        h3 {
+          font-size: 18px;
+        }
+
+        ul {
+          list-style: none;
+          font-size: 16px;
+          li {
+            color: #6d94b5;
+            margin-bottom: 10px;
+          }
+
+          li a {
+            color: white;
+            margin-left: 10px;
+          }
+        }
+      }
+    }
+
+    .content-main {
+      display: inline;
+      .main-nav {
+        margin: 40px;
+        background-color: white;
+
+        ul {
+          list-style: none;
+          display: inline;
+
+          li {
+            display: inline-block;
+            text-align: center;
+            margin: 15px 0 15px 0;
+            padding: 0 105px;
+
+            p {
+              color: $gray;
+              font-size: 14px;
+              margin-top: 0;
+              margin-bottom: 0;
+            }
+
+            span {
+              color: $black;
+              font-size: 16px;
+              font-weight: bold;
+            }
+          }
+        }
+      }
+
+      .main-info {
+        font-size: 12px;
+        color: #8c8c8c;
+        background-color: white;
+        padding: 20px;
+        margin: 0 40px;
+        display: flex;
+        border-bottom: solid 1px $gray;
+
+        img {
+          display: inline-block;
+        }
+
+        .info {
+          display: inline-block;
+          margin-left: 20px;
+
+          embed {
+            width: 1200px;
+            height: 280px;
+          }
+
+          span {
+            font-size: 17px;
+            font-weight: bold;
+            color: black;
+          }
+        }
+      }
+
+    }
+
+    .content-rightSide {
+      background-color: white;
+      height: 873px;
+      width: 290px;
+
+      .rightSide-follows {
+        margin-left: 30px;
+        ul {
+          list-style: none;
+          display: inline;
+          li {
+
+            span {
+              color: $gray;
+            }
+
+            h3 {
+              font-size: 18px;
+            }
+
+            a {
+              border: solid 1px $gray;
+              padding: 0 8px 0 8px;
+              margin-left: 50px;
+            }
+
+            .follow_introduce {
+              display: inline-block;
+              font-size: 14px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .portrait-little {
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+  }
+
+  .portrait-big {
+    border-radius: 50%;
+    height: 70px;
+    width: 70px;
   }
 
 }
